--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -12,6 +12,7 @@ $gray-price-string-font: #999999;
 $gray-slider: #d5d5d5;
 
 .wrapper {
+  position: relative;
   height: 400px;
   max-width: 890px;
   background-color: #3fa07c;
@@ -80,6 +81,7 @@ $gray-slider: #d5d5d5;
     border-left: 10px solid #ff8e26;
   }
 }
+//點擊和hover效果
 .click-hightlight {
   background-color: $light-yellow-click-highlight;
   border: 1px solid $pink-table-hover;
@@ -89,4 +91,34 @@ $gray-slider: #d5d5d5;
 }
 .last-col-right-border {
   border-right: 1px solid #e1e2e4;
+}
+
+@media (max-width: 768px) {
+  .right-table {
+    overflow: hidden;
+  }
+  .right-col {
+    width: 33.333%;
+  }
+  //arrow setting
+  .fas {
+    color: white;
+  }
+  .slide-btn {
+    cursor: pointer;
+    display: block;
+    padding: 13px 3px;
+    line-height: 1;
+    background: hsla(0, 0%, 67%, 0.5);
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    color: #fff;
+  }
+  .slide-right {
+    right: 0;
+  }
+  .slide-left {
+    left: 89px;
+  }
 }
