--- a/css/layout.css
+++ b/css/layout.css
@@ -2,26 +2,28 @@
 .wrapper {
   position: relative;
   height: 400px;
-  max-width: 890px;
+  max: 100%;
   background-color: #3fa07c;
 }
 
-.data, .left-col, .right-col-data {
+.data,
+.left-col,
+.right-col-data {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   height: 50px;
   border-left: 1px solid #e1e2e4;
   border-bottom: 1px solid #e1e2e4;
@@ -93,6 +95,10 @@
   border-left: 10px solid #ff8e26;
 }
 
+.last-col-right-border {
+  border-right: 1px solid #e1e2e4;
+}
+
 .click-hightlight {
   background-color: #fff9e3;
   border: 1px solid #fe8b88;
@@ -102,16 +108,15 @@
   background-color: #f7f7f7;
 }
 
-.last-col-right-border {
-  border-right: 1px solid #e1e2e4;
-}
-
 @media (max-width: 768px) {
-  .right-table {
-    overflow: hidden;
+  body::-webkit-scrollbar {
+    display: none;
+  }
+  .wrapper {
+    width: 200%;
   }
   .right-col {
-    width: 33.333%;
+    max-width: 256px;
   }
   .fas {
     color: white;
@@ -119,12 +124,12 @@
   .slide-btn {
     cursor: pointer;
     display: block;
-    padding: 13px 3px;
-    line-height: 1;
-    background: rgba(171, 171, 171, 0.5);
     position: absolute;
     top: 50%;
     z-index: 1;
+    padding: 13px 3px;
+    line-height: 1;
+    background: rgba(171, 171, 171, 0.5);
     color: #fff;
   }
   .slide-right {
