--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -14,7 +14,7 @@ $gray-slider: #d5d5d5;
 .wrapper {
   position: relative;
   height: 400px;
-  max-width: 890px;
+  max: 100%;
   background-color: #3fa07c;
 }
 .data {
@@ -81,6 +81,10 @@ $gray-slider: #d5d5d5;
     border-left: 10px solid #ff8e26;
   }
 }
+//最右行border
+.last-col-right-border {
+  border-right: 1px solid #e1e2e4;
+}
 //點擊和hover效果
 .click-hightlight {
   background-color: $light-yellow-click-highlight;
@@ -89,16 +93,17 @@ $gray-slider: #d5d5d5;
 .click-hightlight-neighbor {
   background-color: $light-gray-click-middle-table;
 }
-.last-col-right-border {
-  border-right: 1px solid #e1e2e4;
-}
-
 @media (max-width: 768px) {
-  .right-table {
-    overflow: hidden;
+  body {
+    　overflow-y: scroll;
+
+    　overflow-x: hidden;
+  }
+  .wrapper {
+    width: 200%;
   }
   .right-col {
-    width: 33.333%;
+    max-width: 256px;
   }
   //arrow setting
   .fas {
@@ -107,12 +112,12 @@ $gray-slider: #d5d5d5;
   .slide-btn {
     cursor: pointer;
     display: block;
-    padding: 13px 3px;
-    line-height: 1;
-    background: hsla(0, 0%, 67%, 0.5);
     position: absolute;
     top: 50%;
     z-index: 1;
+    padding: 13px 3px;
+    line-height: 1;
+    background: hsla(0, 0%, 67%, 0.5);
     color: #fff;
   }
   .slide-right {
