--- a/css/layout.css
+++ b/css/layout.css
@@ -2,28 +2,26 @@
 .wrapper {
   position: relative;
   height: 400px;
-  max: 100%;
+  width: 100%;
   background-color: #3fa07c;
 }
 
-.data,
-.left-col,
-.right-col-data {
+.data, .left-col, .right-col-data {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   height: 50px;
   border-left: 1px solid #e1e2e4;
   border-bottom: 1px solid #e1e2e4;
